Fix horizontal scroll

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -310,6 +310,7 @@ header {
     background-color: $white;
     position: relative;
     padding-bottom: 150px;
+    overflow: hidden;
 
     hgroup {
         padding-top: 150px;
@@ -385,7 +386,7 @@ header {
 
 .how-it-works {
     background-color: $section;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -532,7 +533,7 @@ header {
 .site-footer {
     background-color: $text;
     color: $green;
-    height: 193px;
+    padding: 70px 0;
     font-family: $work-sans;
     @include fz(22);
 }
@@ -540,18 +541,42 @@ header {
 .footer-container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
     gap: 90px;
 }
 
 .footer-brand-nav {
     display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
     gap: 42px;
+}
+
+.footer-bottom {
+    width: 100%;
+    color: $section;
+
+    a {
+        color: $section;
+        text-decoration: underline;
+
+        &:hover {
+            opacity: 0.8;
+        }
+
+        &:active {
+            color: $green;
+        }
+    }
+}
+
+.footer-logo {
+    display: flex;
+    align-items: center;
 }
 
 .footer-nav {
     display: flex;
-    gap: 70px;
+    gap: 90px;
 }
 
 .nav-column {
@@ -570,6 +595,10 @@ header {
     opacity: 0.8;
 }
 
+.footer-nav a:active {
+    color: $white;
+}
+
 .footer-info-social {
     display: flex;
     justify-content: space-between;
@@ -586,14 +615,14 @@ header {
 .footer-socials {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 15px;
 }
 
 .social-icon {
-    background-color: #FFFFFF;
-    color: #1A3326;
-    width: 32px;
-    height: 32px;
+    background-color: $white;
+    color: $text;
+    width: 42px;
+    height: 42px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -606,22 +635,8 @@ header {
     opacity: 0.9;
 }
 
-.social-icon svg {
-    width: 18px;
-    height: 18px;
-}
-
-.footer-bottom {
-    margin-top: 40px;
-    padding-top: 20px;
-}
-
-.footer-bottom p {
-    margin: 0;
-    width: 100%;
-}
-
-.footer-bottom a {
-    color: #D4FA61;
-    text-decoration: underline;
+.social-icon:hover {
+    transform: scale(1.1);
+    opacity: 0.9;
+    background-color: $green;
 }
